<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/defaultThemeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_theme"/>

    <Button
        android:id="@+id/redThemeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/red_theme"/>

    <Button
        android:id="@+id/greenThemeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/green_theme"/>

    <Button
        android:id="@+id/blueThemeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/blue_theme"/>

</LinearLayout>