<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/item_margin"
    tools:context=".view.ProfileFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/profile"
        android:textSize="40sp"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:scaleType="center"
            android:src="@android:color/darker_gray"
            android:contentDescription="@string/profile_picture_description" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/uploadImageButton"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_gravity="center"
            android:paddingStart="25dp"
            android:paddingEnd="15dp"
            app:iconGravity="textStart"
            app:iconPadding="10dp"
            app:icon="@android:drawable/ic_menu_camera"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:paddingHorizontal="5dp"
            android:text="@string/profile_username"/>

        <TextView
            android:id="@+id/usernameProfileField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="25sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:paddingHorizontal="5dp"
            android:text="@string/profile_episodes_watched"/>

        <TextView
            android:id="@+id/episodesProfileField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="25sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:paddingHorizontal="5dp"
            android:text="@string/profile_shows_watched"/>

        <TextView
            android:id="@+id/showsProfileField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="25sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:paddingHorizontal="5dp"
            android:text="@string/profile_time_spent"/>

        <TextView
            android:id="@+id/timeProfileField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="25sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:paddingHorizontal="5dp"
            android:text="@string/profile_join_date"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/joinDateField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textSize="25sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/changePasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/change_password"/>

    <Button
        android:id="@+id/changeThemeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/change_theme"/>

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/logout"/>
</LinearLayout>