<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="@dimen/image_margin"
    android:gravity="center"
    android:id="@+id/linearLayout"
    tools:ignore="UseCompoundDrawables">

    <ImageView
        android:id="@+id/libraryItemImage"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/anime_item_content_description" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/libraryItemTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoSizeMinTextSize="1dp"
            android:autoSizeTextType="uniform"
            android:maxLines="2"
            android:textAppearance="?attr/textAppearanceListItem" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:text="@string/studio_text"/>

            <TextView
                android:id="@+id/libraryItemStudio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:text="@string/genres_text"/>

            <TextView
                android:id="@+id/libraryItemGenres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:autoSizeMinTextSize="1dp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:text="@string/aired_date_text" />

            <TextView
                android:id="@+id/libraryItemAiredDate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:autoSizeMinTextSize="1dp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:text="@string/episodes_text"/>

            <TextView
                android:id="@+id/libraryItemEpisodes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:text="@string/episodes_watched_text"/>

            <TextView
                android:id="@+id/libraryItemEpisodesWatched"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/removeFromEpisodesWatched"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="-"/>

            <Button
                android:id="@+id/addToEpisodesWatched"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="+"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>